Better markup, more IDs

--- a/sample-rhythm.html
+++ b/sample-rhythm.html
@@ -1,14 +1,15 @@
 ---
-layout: page
+layout: text
 title: Vertical Rhythm
+nav-title: Vertical Rhythm
 permalink: sample-rhythm/
 ---
 
-<div class="typography vertical-grid">
+<div class="vertical-grid">
               
-	<h1 id="menu">Establish a Vertical Rhythm</h1>
+	<h2 id="menu">Establish a Vertical Rhythm</h2>
 	<p>Use our <code>.vertical-grid</code> class to add a background that can help establish a vertical rhythm. The line-height of the grid should be adjusted for each project, as well as the vertical offset to align to the first element. </p>
-	<pre class="examplecode"><code>background-image: url(http://basehold.it/i/31/cc0000);
+	<pre><code>background-image: url(http://basehold.it/i/31/cc0000);
 background-position: 0px 14px;;</code></pre>
 	<p>Adjust the '31' in the first line to change the space between lines. Look at your rendered line-height on a <code>&lt;p&gt;</code> to see what the value needs to be. The adjust the position offset if needed.</p>
 	
