--- a/icons.html
+++ b/icons.html
@@ -1,14 +1,18 @@
 ---
-layout: page
+layout: text
 nav-title: Icons
 title: Font Awesome Icons
 permalink: icons/
 ---
 
-<p>Full font included here and CSS via MaxCDN. <a href="http://fortawesome.github.io/Font-Awesome/icons/">Visit this page on FontAwesome&rsquo;s website</a> to grab the right CSS class or search for a particular icon. </p>
+<h2>Prototype with FontAwesome v4.7.0</h2>
 
-<p>Fonts that this theme uses:</p>
+<p>Full FontAwesome font included with and CSS via MaxCDN. <a href="http://fontawesome.io/icons/">Visit this page on FontAwesome&rsquo;s website</a> to grab the right CSS class and search for a particular icon. </p>
+
+<h3>Track which icons you use here, so you can build a custom font later (with just the ones this project needs)</h3>
+
+<p>Icons that this theme uses:</p>
 
 <!--<h2>
-	<span class="fa fa-bars"><span>&equiv;</span></span><br>
+	<span class="fa fa-bars" aria-hidden="true"><span>&equiv;</span></span><br>
 </h2>-->
